--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
 <body>
   <h1>unfollowers</h1>
   <p>see who unfollowed you</p>
-  <form id="form">
-    <div class="inputs-container">
-      <div class="input-container">
-        <label for="following_file">Following</label>
-        <input type="file" id="following_file" name="following_file" accept=".json">
-      </div>
-      <div class="input-container">
-        <label for="followers_file">Followers</label>
-        <input type="file" id="followers_file" name="followers_file" accept=".json">
-      </div>
+    <div class="container">
+      <form id="form">
+        <div class="inputs-container">
+          <div class="input-container">
+            <label for="following_file">Following</label>
+            <input type="file" id="following_file" name="following_file" accept=".json">
+          </div>
+          <div class="input-container">
+            <label for="followers_file">Followers</label>
+            <input type="file" id="followers_file" name="followers_file" accept=".json">
+          </div>
+        </div>
+        <button type="button" onclick="getUnfollowers()">Get Unfollowers</button>
+      </form>
+      <div class="unfollowers"></div>
+      <a class ="download" href="https://accountscenter.instagram.com/info_and_permissions/dyi/" target="_blank">download your data</a>
     </div>
-    <button type="button" onclick="getUnfollowers()">Get Unfollowers</button>
-  </form>
-  <div id="result"></div>
   <script src="unfollowers.js"></script>
 </body>
 </html>
