--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <button type="button" onclick="getUnfollowers()">Get Unfollowers</button>
       </form>
-      <div class="unfollowers"></div>
+      <div id="unfollowers"></div>
       <a class ="download" href="https://accountscenter.instagram.com/info_and_permissions/dyi/" target="_blank">download your data</a>
     </div>
   <script src="unfollowers.js"></script>
