--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="inputs-container">
           <div class="input-container">
             <label for="following_file">Following</label>
-            <input type="file" id="following_file" name="following_file" accept=".json">
+            <input type="file" id="following_file" name="following_file">
           </div>
           <div class="input-container">
             <label for="followers_file">Followers</label>
