--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <p>see who unfollowed you</p>
     <div class="container">
       <form id="form">
-        <div class="inputs-container">
-          <div class="input-container">
+        <div class="inputs">
+          <div class="input">
             <label for="following_file">Following</label>
             <input type="file" id="following_file" name="following_file" accept=".json">
           </div>
-          <div class="input-container">
+          <div class="input">
             <label for="followers_file">Followers</label>
             <input type="file" id="followers_file" name="followers_file" accept=".json">
           </div>
