--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css"> 
-  <title>unfollowers</title>
-</head>
-<body>
-  <h1>unfollowers</h1>
-  <p>see who unfollowed you</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>unfollowers</title>
+  </head>
+  <body>
+    <h1>unfollowers</h1>
+    <p>see who unfollowed you</p>
     <div class="container">
       <form id="form">
         <div class="inputs">
           <div class="input">
             <label for="following_file">Following</label>
-            <input type="file" id="following_file" name="following_file" accept=".json">
+            <input
+              type="file"
+              id="following_file"
+              name="following_file"
+              accept=".json"
+            />
           </div>
           <div class="input">
             <label for="followers_file">Followers</label>
-            <input type="file" id="followers_file" name="followers_file" accept=".json">
+            <input
+              type="file"
+              id="followers_file"
+              name="followers_file"
+              accept=".json"
+            />
           </div>
         </div>
-        <button type="button" onclick="getUnfollowers()">Get Unfollowers</button>
+        <button type="button" onclick="getUnfollowers()">
+          Get Unfollowers
+        </button>
       </form>
       <div id="unfollowers"></div>
-      <a class ="download" href="https://accountscenter.instagram.com/info_and_permissions/dyi/" target="_blank">download your data</a>
+      <a
+        class="download"
+        href="https://accountscenter.instagram.com/info_and_permissions/dyi/"
+        target="_blank"
+        >download your data</a
+      >
     </div>
-  <script src="unfollowers.js"></script>
-</body>
+    <script src="unfollowers.js"></script>
+  </body>
 </html>
