--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +7,7 @@
     <title>unfollowers</title>
   </head>
   <body>
-    <h1>unfollowers</h1>
+    <h1 >unfollowers</h1>
     <p>see who unfollowed you</p>
     <div class="container">
       <form id="form">
@@ -41,6 +42,12 @@
         target="_blank"
         >download your data</a
       >
+      <a
+        class="download"
+        href="help.html"
+        >help</a
+      >
+    </div>
     </div>
     <script src="unfollowers.js"></script>
   </body>
