add link to header

--- a/help.html
+++ b/help.html
@@ -7,7 +7,7 @@
     <title>help</title>
   </head>
   <body>
-  	<h1>unfollowers</h1>
+    <h1><a class="header" href="index.html">unfollowers</a></h1>
     <p>see who unfollowed you</p>
     <div>
     	<span><b>To utilize unfollowers, follow these steps</b></span>
