--- a/help.html
+++ b/help.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,26 +10,36 @@
     <h1><a class="header" href="index.html">unfollowers</a></h1>
     <p>see who unfollowed you</p>
     <div>
-    	<span><b>To utilize unfollowers, follow these steps</b></span>
-    	<br/>
-    	<br/>
-		Download your data
-		<ol>
-			<li>access your <a class="download" href="https://accountscenter.instagram.com	/info_and_permissions/dyi/" target="_blank">instagram account page</a></li>
-			<li>request a download</li>
-			<li>choose your instagram account</li>
-			<li>click "select types of information"</li>
-			<li>scroll down, "select followers and following"</li>
-			<li>select JSON format</li>
-			<li>submit request</li>
-		</ol>
-		<span> Once you have received your data </span>
-		<ol>
-			<li>unzip the file sent to your email</li>
-			<li>find your <i>followers_and_following folder</i></li>
-			<li>upload <i>following.json</i> and <i>followers_1.json</i>, respectively</li>
-			<li>click <i>get unfollowers</i></li>
-		</ol>
+      <span><b>To utilize unfollowers, follow these steps</b></span>
+      <br />
+      <br />
+      Download your data
+      <ol>
+        <li>
+          access your
+          <a
+            class="download"
+            href="https://accountscenter.instagram.com	/info_and_permissions/dyi/"
+            target="_blank"
+            >instagram account page</a
+          >
+        </li>
+        <li>request a download</li>
+        <li>choose your instagram account</li>
+        <li>click "select types of information"</li>
+        <li>scroll down, "select followers and following"</li>
+        <li>choose JSON format</li>
+        <li>submit request</li>
+      </ol>
+      <span> Once you have received your data </span>
+      <ol>
+        <li>unzip the file sent to your email</li>
+        <li>find your <i>followers_and_following folder</i></li>
+        <li>
+          upload <i>following.json</i> and <i>followers_1.json</i>, respectively
+        </li>
+        <li>click <i>get unfollowers</i></li>
+      </ol>
     </div>
   </body>
 </html>
