--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -42,12 +42,7 @@
         target="_blank"
         >download your data</a
       >
-      <a
-        class="download"
-        href="help.html"
-        >help</a
-      >
-    </div>
+      <a class="download" href="help.html">help</a>
     </div>
     <script src="unfollowers.js"></script>
   </body>
