update help page

--- a/help.html
+++ b/help.html
@@ -27,7 +27,7 @@
         <li>request a download</li>
         <li>choose your instagram account</li>
         <li>click "select types of information"</li>
-        <li>scroll down, "select followers and following"</li>
+        <li>scroll down, select "followers and following"</li>
         <li>choose JSON format</li>
         <li>submit request</li>
       </ol>
