style help text

--- a/help.html
+++ b/help.html
@@ -7,13 +7,13 @@
     <title>help</title>
   </head>
   <body>
-    <h1><a class="header" href="index.html">unfollowers</a></h1>
+    <h1><a class="header gradient" href="index.html">unfollowers</a></h1>
     <p>see who unfollowed you</p>
     <div>
       <span><b>To utilize unfollowers, follow these steps</b></span>
       <br />
       <br />
-      Download your data
+      <span>Download your data</span>
       <ol>
         <li>
           access your
@@ -34,11 +34,11 @@
       <span> Once you have received your data </span>
       <ol>
         <li>unzip the file sent to your email</li>
-        <li>find your <i>followers_and_following folder</i></li>
+        <li>find your "followers_and_following" folder</li>
         <li>
-          upload <i>following.json</i> and <i>followers_1.json</i>, respectively
+          upload "following.json" and "followers_1.json", respectively
         </li>
-        <li>click <i>get unfollowers</i></li>
+        <li><span class="gradient">get unfollowers</span></li>
       </ol>
     </div>
   </body>
