--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>unfollowers</title>
   </head>
   <body>
-    <h1><a class="header" href="index.html">unfollowers</a></h1>
+    <h1><a class="header gradient" href="index.html">unfollowers</a></h1>
     <p>see who unfollowed you</p>
     <div class="container">
       <form id="form">
