--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>help</title>
+    <title>unfollowers</title>
   </head>
   <body>
     <h1><a class="header gradient" href="index.html">unfollowers</a></h1>
