add link to unfollower text

--- a/help.html
+++ b/help.html
@@ -38,7 +38,7 @@
         <li>
           upload "following.json" and "followers_1.json", respectively
         </li>
-        <li><span class="gradient">get unfollowers</span></li>
+        <li><a href="index.html" class="gradient">get unfollowers</a></li>
       </ol>
     </div>
   </body>
