--- a/help.html
+++ b/help.html
@@ -35,9 +35,7 @@
       <ol>
         <li>unzip the file sent to your email</li>
         <li>find your "followers_and_following" folder</li>
-        <li>
-          upload "following.json" and "followers_1.json", respectively
-        </li>
+        <li>upload "following.json" and "followers_1.json", respectively</li>
         <li><a href="index.html" class="gradient">get unfollowers</a></li>
       </ol>
     </div>
