update help text

--- a/help.html
+++ b/help.html
@@ -28,7 +28,7 @@
         <li>choose your instagram account</li>
         <li>click "select types of information"</li>
         <li>scroll down, select "followers and following"</li>
-        <li>choose JSON format</li>
+        <li>set format as JSON and date range as "all time"</li>
         <li>submit request</li>
       </ol>
       <span> Once you have received your data </span>
