update flex styling

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
       </form>
       <div id="unfollowers"></div>
       <a
-        class="download"
+        class="footer-link"
         href="https://accountscenter.instagram.com/info_and_permissions/dyi/"
         target="_blank"
         >download your data</a
       >
-      <a class="download" href="help.html">help</a>
+      <a class="footer-link" href="help.html">help</a>
     </div>
     <script src="unfollowers.js"></script>
   </body>
