--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- JSZip (JSZip.min.js) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -26,21 +28,11 @@
       <form id="form">
         <div class="inputs">
           <div class="input">
-            <label for="following_file">Following</label>
             <input
               type="file"
-              id="following_file"
-              name="following_file"
-              accept=".json"
-            />
-          </div>
-          <div class="input">
-            <label for="followers_file">Followers</label>
-            <input
-              type="file"
-              id="followers_file"
-              name="followers_file"
-              accept=".json"
+              id="unfollowers_zip"
+              name="unfollowers_zip"
+              accept=".zip"
             />
           </div>
         </div>
