--- a/help.html
+++ b/help.html
@@ -24,15 +24,12 @@
     <p>see who unfollowed you</p>
     <div>
       <span><b>To utilize unfollowers, follow these steps</b></span>
-      <br />
-      <br />
-      <span>Download your data</span>
       <ol>
         <li>
           access your
           <a
             class="download"
-            href="https://accountscenter.instagram.com	/info_and_permissions/dyi/"
+            href="https://accountscenter.instagram.com/info_and_permissions/dyi/"
             target="_blank"
             >instagram account page</a
           >
@@ -41,14 +38,9 @@
         <li>choose your instagram account</li>
         <li>click "select types of information"</li>
         <li>scroll down, select "followers and following"</li>
-        <li>set format as JSON and date range as "all time"</li>
+        <li>set format to JSON and date range as "all time"</li>
         <li>submit request</li>
-      </ol>
-      <span> Once you have received your data </span>
-      <ol>
-        <li>unzip the file sent to your email</li>
-        <li>find your "followers_and_following" folder</li>
-        <li>upload "following.json" and "followers_1.json", respectively</li>
+        <li>upload zip file sent to your email</li>
         <li><a href="index.html" class="gradient">get unfollowers</a></li>
       </ol>
     </div>
